--- a/expo-amplify/package.json
+++ b/expo-amplify/package.json
@@ -8,10 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
+    "@react-native-community/netinfo": "4.6.0",
+    "apollo-boost": "^0.4.7",
     "aws-amplify": "^2.2.4",
     "aws-amplify-react-native": "^3.2.2",
+    "aws-appsync": "^3.0.2",
+    "aws-appsync-react": "^3.0.2",
     "expo": "~36.0.0",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "react": "~16.9.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-screens": "2.0.0-alpha.12",
@@ -24,5 +32,8 @@
     "babel-preset-expo": "~8.0.0",
     "typescript": "~3.6.3"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+    "apollo-client": "2.6.3"
+  }
 }
