--- a/app/package.json
+++ b/app/package.json
@@ -10,9 +10,10 @@
   "dependencies": {
     "@aws-amplify/api": "^2.1.5",
     "@aws-amplify/pubsub": "^2.1.5",
-    "@react-native-community/masked-view": "0.1.5",
-    "@react-navigation/native": "^5.0.0",
+    "@react-native-community/masked-view": "^0.1.5",
+    "@react-navigation/stack": "^5.0.0",
     "expo": "~36.0.0",
+    "expo-camera": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -20,7 +21,9 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^4.1.1",
+    "react-navigation-stack": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
